src/Apttus Quote/Proposal-Configuration Integration/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ReadyForRevRecDate__c</fullName>
        <description>The date when the order item is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is order item for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account associated with the line item</description>
        <inlineHelpText>ID of the ship to account associated with the line item</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Items (Ship To)</relationshipLabel>
        <relationshipName>QuoteLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>ProposalSummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>ProposalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>